Trade_coin: Orderform - create content and add itemHeaders - Update html, css and add demo64

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -819,6 +819,13 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-yl1yvv"><path d="M10.5 20v-3h3v3h-3zM10.5 7V4h3v3h-3zM10.5 10.5v3h3v-3h-3z" fill="#76808F"></path></svg>
                             </div>
                         </div>
+                        <div class="orderform-content">
+                            <div class="orderform-cHeader">
+                                <div class="header-item status-orange">Limit</div>
+                                <div class="header-item">Market</div>
+                                <div class="header-item">Stop-Limit</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="market">
