--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -1395,6 +1395,24 @@ i {
     color: rgb(234, 236, 239);
     background-color: rgb(30, 32, 38);
 }
+.orderform-content{
+    box-sizing: border-box;
+    padding: 12px 16px 16px;
+    font-size: 14px;
+    color: rgb(234, 236, 239);
+}
+.orderform-cHeader{
+    display: flex;
+    border-bottom: 1px solid rgb(37, 41, 48);
+}
+.orderform-cHeader .header-item{
+    margin-right: 16px;
+    padding-top: 8px;
+    padding-bottom: 10px;
+    font-weight: 500;
+    color: rgb(132, 142, 156);
+    cursor: pointer;
+}
 /* ------------------------------------------------ */
 .marketActivity-header{
     box-sizing: border-box;
