Trade_coin: Orderform - Add icon and right item to finish header in content - Update html, css and add demo65

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -823,7 +823,14 @@
                             <div class="orderform-cHeader">
                                 <div class="header-item status-orange">Limit</div>
                                 <div class="header-item">Market</div>
-                                <div class="header-item">Stop-Limit</div>
+                                <div class="header-items">
+                                    <span>Stop-Limit</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="t.third" class="css-1ipyq67"><path d="M16 9v1.2L12 15l-4-4.8V9h8z" fill="currentColor"></path></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-1sf5jdr"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 21a9 9 0 100-18 9 9 0 000 18zM10.75 8.5V6h2.5v2.5h-2.5zm0 9.5v-7h2.5v7h-2.5z" fill="currentColor"></path></svg>
+                                </div>
+                                <div class="header-right">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-16ltl6p"><path fill-rule="evenodd" clip-rule="evenodd" d="M19.5 3h-14v18h14V3zM8 5.5h9v3.908H8V5.5zm6 6h3v7h-3v-7zm-6 0h4V14H8v-2.5zM8 16h4v2.5H8V16z" fill="currentColor"></path></svg>
+                                </div>
                             </div>
                         </div>
                     </div>
