--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -1413,6 +1413,32 @@ i {
     color: rgb(132, 142, 156);
     cursor: pointer;
 }
+.orderform-cHeader .header-items{
+    padding-top: 8px;
+    padding-bottom: 10px;
+    font-weight: 500;
+    color: rgb(132, 142, 156);
+    cursor: pointer;
+}
+.orderform-cHeader .header-right{
+    display:flex; flex: 1; justify-content: end;
+    align-items: center;
+}
+.orderform-cHeader .header-right svg{
+    width: 16px;
+    height: 16px;
+    font-size: 16px;
+}
+.orderform-cHeader svg{
+    box-sizing: border-box;
+    margin: 0px;
+    min-width: 0px;
+    color: rgb(132, 142, 156);
+    font-size: 16px;
+    fill: rgb(132, 142, 156);
+    width: 1em;
+    height: 1em;
+}
 /* ------------------------------------------------ */
 .marketActivity-header{
     box-sizing: border-box;
