Trade_coin: Orderform - Create header for fisrt form body - Update html, css and add demo66

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -833,6 +833,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="orderform-form">
+                            <div class="form-item">
+                                <div class="iHead">
+                                    <a href="" style="margin-right: 8px; color: rgb(132, 142, 156);">Avbl</a>
+                                    <a href="">- USDT</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="market">
