--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -1397,7 +1397,7 @@ i {
 }
 .orderform-content{
     box-sizing: border-box;
-    padding: 12px 16px 16px;
+    padding: 12px 16px 0;
     font-size: 14px;
     color: rgb(234, 236, 239);
 }
@@ -1438,6 +1438,24 @@ i {
     fill: rgb(132, 142, 156);
     width: 1em;
     height: 1em;
+}
+.orderform-form{
+    display: flex;
+    padding: 0 16px;
+
+}
+.orderform .form-item{
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    flex: 1;
+}
+.iHead{
+    padding-top: 10px;
+    margin-bottom: 8px;
+}
+.iHead a{ 
+    font-size: 12px;
 }
 /* ------------------------------------------------ */
 .marketActivity-header{
