--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -839,6 +839,15 @@
                                     <a href="" style="margin-right: 8px; color: rgb(132, 142, 156);">Avbl</a>
                                     <a href="">- USDT</a>
                                 </div>
+                                <form action="">
+                                    <div class="form-price">
+                                        <div class="form-price-item">
+                                            <div>Price</div>
+                                            <input type="text" value="29183.99">
+                                            <div style="color: rgb(234, 236, 239);">USDT</div>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
