--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -847,8 +847,16 @@
                                             <div style="color: rgb(234, 236, 239);">USDT</div>
                                         </div>
                                     </div>
+                                    <div class="form-price">
+                                        <div class="form-price-item">
+                                            <div>Amount</div>
+                                            <input type="text" value="">
+                                            <div style="color: rgb(234, 236, 239);">BTC</div>
+                                        </div>
+                                    </div>
                                 </form>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
