--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -854,6 +854,11 @@
                                             <div style="color: rgb(234, 236, 239);">BTC</div>
                                         </div>
                                     </div>
+                                    <div class="form-login">
+                                        <span class="status-orange">Log In </span>
+                                        &nbsp;or&nbsp;
+                                        <span class="status-orange">Register Now</span>
+                                    </div>
                                 </form>
                             </div>
                             
