--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -1500,7 +1500,60 @@ i {
     opacity: 1;
     border: none !important;
 }
-
+.bn-slide-container{
+    position: relative;
+    box-sizing: border-box;
+    margin: 4px 0px 10px;
+    min-width: 0px;
+    display: flex;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    align-items: center;
+    width: calc(100% - 14px);
+    margin-left: 7px;
+    height: 25px;
+}
+.bn-slide-container div:nth-child(1){
+    width: 100%;
+    box-sizing: content-box;
+    position: absolute;
+    height: 4px;
+    background-color: rgb(71, 77, 87);
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    background-clip: padding-box;
+}
+.bn-slide-container div:nth-child(2){
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    transform: translateX(-50%) rotate(45deg);
+    background-color: rgb(30, 35, 41);
+    border-radius: 4px;
+    border: 4px solid rgb(245, 245, 245);
+    z-index: 20;
+    cursor: grab;
+    transition: box-shadow 0.2s ease 0s;
+    background-color: rgb(183, 189, 198);
+}
+.bn-slide-container div:nth-child(n+3){
+    box-sizing: content-box;
+    position: absolute;
+    transform: translateX(-50%) rotate(45deg);
+    background-color: rgb(30, 35, 41);
+    color: rgb(132, 142, 156);
+    width: 6px;
+    height: 6px;
+    border-radius: 2px;
+    border: 2px solid rgb(71, 77, 87);
+    z-index: 10;
+    overflow: visible;
+    cursor: pointer;
+}
+.bn-slide-container div:nth-child(n+3):hover{
+    border-color: rgb(24, 26, 32);
+    background-color: rgb(71, 77, 87);
+}
 .form-login{
     display: flex;
     align-items: center;
@@ -1511,6 +1564,7 @@ i {
     border-radius: 4px;
     height: 40px;
 }
+
 /* ------------------------------------------------ */
 .marketActivity-header{
     box-sizing: border-box;
