--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -854,6 +854,14 @@
                                             <div style="color: rgb(234, 236, 239);">BTC</div>
                                         </div>
                                     </div>
+                                    <div class="bn-slide-container">
+                                        <div></div>
+                                        <div></div>
+                                        <div style="left: 25%;"></div>
+                                        <div style="left: 50%;"></div>
+                                        <div style="left: 75%;"></div>
+                                        <div style="left: 100%;"></div>
+                                    </div>
                                     <div class="form-login">
                                         <span class="status-orange">Log In </span>
                                         &nbsp;or&nbsp;
