--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -834,6 +834,41 @@
                             </div>
                         </div>
                         <div class="orderform-form">
+                            <div class="form-item" style="padding-right: 32px;">
+                                <div class="iHead">
+                                    <a href="" style="margin-right: 8px; color: rgb(132, 142, 156);">Avbl</a>
+                                    <a href="">- USDT</a>
+                                </div>
+                                <form action="">
+                                    <div class="form-price">
+                                        <div class="form-price-item">
+                                            <div>Price</div>
+                                            <input type="text" value="29183.99">
+                                            <div style="color: rgb(234, 236, 239);">USDT</div>
+                                        </div>
+                                    </div>
+                                    <div class="form-price">
+                                        <div class="form-price-item">
+                                            <div>Amount</div>
+                                            <input type="text" value="">
+                                            <div style="color: rgb(234, 236, 239);">BTC</div>
+                                        </div>
+                                    </div>
+                                    <div class="bn-slide-container">
+                                        <div></div>
+                                        <div></div>
+                                        <div style="left: 25%;"></div>
+                                        <div style="left: 50%;"></div>
+                                        <div style="left: 75%;"></div>
+                                        <div style="left: 100%;"></div>
+                                    </div>
+                                    <div class="form-login">
+                                        <span class="status-orange">Log In </span>
+                                        &nbsp;or&nbsp;
+                                        <span class="status-orange">Register Now</span>
+                                    </div>
+                                </form>
+                            </div>
                             <div class="form-item">
                                 <div class="iHead">
                                     <a href="" style="margin-right: 8px; color: rgb(132, 142, 156);">Avbl</a>
@@ -869,7 +904,6 @@
                                     </div>
                                 </form>
                             </div>
-                            
                         </div>
                     </div>
                 </div>
