--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -33,72 +33,100 @@
                                         </a>
                                         <div class="dropdown-content node_size">
                                             <div class="dropdown_body">
-                                                <div class="drop_item_left">
+                                                <div class="drop_item">
                                                     <a href="#">
                                                         <div class="drop_clone">
                                                             <div class="logo_drop">
-                                                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="css-1s4hjvp"><use xlink:href="#Dex-g"></use></svg>
+                                                                <img src="../static/img/bab_token/menu_1.png" alt="">
                                                             </div>
                                                             <div class="text_drop">
                                                                 <div class="head_1">Exchange</div>
                                                                 <div class="head_1_text">Blockchain and crypto asset exchange</div>
                                                             </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
                                                         </div>
                                                     </a>
                                                     <a href="#">
                                                         <div class="drop_clone">
                                                             <div class="logo_drop">
-                                                                <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><polygon points="15.648 9.64 13.76 7.752 15.648 5.864 17.536 7.752 15.648 9.64"></polygon><polygon points="11.842 2.485 10.772 1.415 11.842 0.345 12.912 1.415 11.842 2.485"></polygon><path d="M11.8,5.368h.715V4.1H7.527V5.368h.714V9.207L2.464,14.985,5.2,17.724H14.8l2.737-2.739L11.8,9.207Zm1.385,9.011-1.307,1.308L10,13.827,8.118,15.708,6.811,14.4,10,11.214Z"></path><polygon points="4.128 5.872 2.711 4.455 4.128 3.04 5.544 4.455 4.128 5.872"></polygon></svg>
+                                                                <img src="../static/img/bab_token/menu_2.png" alt="">
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Charity</div>
+                                                                <div class="head_1_text">Powering blockchain for good</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <img src="../static/img/bab_token/menu_3.png" alt="">
                                                             </div>
                                                             <div class="text_drop">
                                                                 <div class="head_1">Labs</div>
                                                                 <div class="head_1_text">Incubator for top blockchain projects</div>
                                                             </div>
-                                                        </div>
-                                                    </a>
-                                                    <a href="#">
-                                                        <div class="drop_clone">
-                                                            <div class="logo_drop">
-                                                                <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M13.54,5.89l-3.5-1.46L6.53,5.89,5.08,9.39,6.53,12.9l3.51,1.45,3.5-1.45L15,9.39Zm-1.55,4.23L9.31,7.43l1.27-1.27,2.69,2.69Z"></path><polygon points="12.478 18.146 10.033 19.222 7.592 18.146 7.592 15.768 12.478 15.768 12.478 18.146"></polygon><rect x="1.383" y="8.494" width="2.241" height="1.8"></rect><rect x="16.446" y="8.494" width="2.171" height="1.8"></rect><rect x="1.383" y="8.494" width="2.241" height="1.8"></rect><rect x="16.446" y="8.494" width="2.171" height="1.8"></rect><rect x="9.102" y="0.778" width="1.8" height="2.171"></rect><rect x="3.777" y="2.984" width="1.8" height="2.171" transform="translate(-1.508 4.499) rotate(-45)"></rect><rect x="14.239" y="3.17" width="2.171" height="1.8" transform="translate(1.61 12.029) rotate(-45)"></rect><rect x="3.777" y="2.984" width="1.8" height="2.171" transform="translate(-1.508 4.499) rotate(-45)"></rect></svg>
-                                                            </div>
-                                                            <div class="text_drop">
-                                                                <div class="head_1">Research</div>
-                                                                <div class="head_1_text">Institutional-grade analysis and reports</div>
-                                                            </div>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="drop_item_right">
-                                                    <a href="#">
-                                                        <div class="drop_clone">
-                                                            <div class="logo_drop">
-                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M11.5 0L8.61 2.88L5.72 0L0 5.71L8.6 14.32L17.22 5.71L11.5 0ZM8.6 10.07L5.01 6.49L6.48 5.01L8.6 7.13L8.61 7.12L10.72 5L12.19 6.48L8.61 10.06L8.6 10.07Z"></path></svg>
-                                                            </div>
-                                                            <div class="text_drop">
-                                                                <div class="head_1">BCF</div>
-                                                                <div class="head_1_text">Blockchain charity foundation</div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
                                                             </div>
                                                         </div>
                                                     </a>
                                                     <a href="#">
                                                         <div class="drop_clone">
                                                             <div class="logo_drop">
-                                                                <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><polygon points="5.972 12.709 7.276 14.013 7.276 14.46 7.276 15.381 7.276 16.211 2.689 17.297 3.774 12.709 5.972 12.709"></polygon><path d="M10.99,2.7,8.58,5.12h-3L2.99,7.71l7.82,7.82,1.49,1.5.02.01,2.58-2.59V11.44l2.41-2.42V2.7ZM14.9,9.56H13.07V6.94H10.46V5.12H14.9Z"></path></svg>
-                                                            </div>
-                                                            <div class="text_drop">
-                                                                <div class="head_1">Launchpad</div>
-                                                                <div class="head_1_text">Token Launch Platform</div>
-                                                            </div>
-                                                        </div>
-                                                    </a>
-                                                    <a href="#">
-                                                        <div class="drop_clone">
-                                                            <div class="logo_drop">
-                                                                <svg style="color: rgb(92, 146, 255);;" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><polygon points="16.04 12.7 9.99 17.66 6.62 14.89 3.95 12.7 3.46 4 6.59 4.02 6.62 4 10.02 2.36 13.4 4.02 16.53 4 16.04 12.7"></polygon></svg>
+                                                                <img src="../static/img/bab_token/menu_4.png" alt="">
                                                             </div>
                                                             <div class="text_drop">
                                                                 <div class="head_1">Trust Wallet</div>
                                                                 <div class="head_1_text">Binance's official crypto wallet</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <img src="../static/img/bab_token/menu_5.png" alt="">
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">BABT</div>
+                                                                <div class="head_1_text">Verified user credentials for the Web3 era</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <img src="../static/img/bab_token/menu_16.png" alt="">
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Accept Crypto Payment</div>
+                                                                <div class="head_1_text">Allow your customers to pay with crypto</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
                                                             </div>
                                                         </div>
                                                     </a>
